--- a/index.html
+++ b/index.html
@@ -10,6 +10,31 @@
     <script src="jquery-3.7.1.min.js"></script>
 </head>
 <body>
+    <nav class="navbar navbar-expand-md bg-primary text-light ">
+        <div class="container">
+            <a href="#" class="navbar-brand text-light">Hikmatullah</a>
+            <button class="navbar-toggler " type="button" data-bs-toggle="collapse" data-bs-target="#navmenu">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div  class="collapse navbar-collapse " id="navmenu">
+                <ul class="navbar-nav ms-auto " >
+                    <li class="nav-item">
+                        <a href="#lesson" class="nav-link  text-light">آموزش ها</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#aboutme" class="nav-link text-light">در باره من</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#contactme" class="nav-link text-light">تماس با من</a>
+                    </li>
+                </ul>
+
+            </div>
+        </div>
+
+
+    </nav>
     
 </body>
 </html>
