--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <script src="jquery-3.7.1.min.js"></script>
 </head>
-<body>
+<body class=" d-flex flex-column min-vh-100">
     <nav class="navbar navbar-expand-md bg-primary text-light ">
         <div class="container">
             <a href="#" class="navbar-brand text-light">Hikmatullah</a>
