--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     
           <div class="toast">
             <div class="toast-header">
-              <strong class="me-auto"> .</strong>
+              <strong class="me-auto"> <i class="bi bi-exclamation-circle"></i></strong>
               <button type="button" class="btn-close" data-bs-dismiss="toast"></button>
             </div>
             <div class="toast-body">
