--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
       </section>
 
       <footer class="bg-dark text-light text-center p-2 position-relative mt-auto" >
-        <p class="lead"> Copyright &copy;2024|Hikmat</p>
+        <p class="lead"> Copyright &copy;2024|Hikmat & Farid</p>
       </footer>
 
 
